...
"download_service.error.option_unable_to_move_file" = "Unable to move downloaded file";

"common.dialog.button.open" = "Open";
"common.dialog.button.open_in_new_tab" = "Open in New Tab";
"common.dialog.button.add_bookmark" = "Add Bookmark";
"common.dialog.button.remove_bookmark" = "Remove Bookmark";
"common.dialog.button.show_bookmarks" = "Show Bookmarks";
"common.dialog.button.bookmark" = "Bookmark";

"common.button.go_back" = "Go Back";
"common.button.go_forward" = "Go Forward";
"common.button.done" = "Done";
"common.button.cancel" = "Cancel";
"common.button.ok" = "Ok";
"common.button.yes" = "Yes";
"common.button.no" = "no";
"common.button.print" = "Print";
"common.button.copy" = "Copy";
"common.button.copied" = "Copied";
"common.button.share" = "Share";
"common.button.share_as_pdf" = "Share as PDF";
"common.search" = "Search";
"common.search.inpage" = "Search in page";
"common.find_next" = "Find next";
"common.find_previous" = "Find previous";
"common.search.suggestion" = "Did you mean:";

"common.tab.manager.title" = "Tabs Manager";
"common.tab.navigation.title" = "Tabs";
"common.tab.menu.new_tab" = "New Tab";
"common.tab.menu.close_this" = "Close This Tab";
"common.tab.menu.close_all" = "Close All Tabs";
"common.tab.list.close" = "Close Tab";
"common.tab.menu.library" = "Library";
"common.tab.menu.settings" = "Settings";
"common.export_file.alert.title" = "Export file";
"common.export_file.alert.description" = "Do you want to export the file %@?";
"common.export_file.alert.button.title" = "Export";

"outline_button.outline.title" = "Outline";
...
"outline_button.outline.empty.message" = "No outline available";

"bookmark_button.show.help" = "Show the bookmark sheet, where the current page can be added or removed from bookmarks.";

"article_shortcut.main.button.title" = "Main Page";
"article_shortcut.main.button.help" = "Show main page";
"article_shortcut.random.button.title.mac" = "Random Page";
"article_shortcut.random.button.title.ios" = "Random Page";
"article_shortcut.random.button.help" = "Show random page";

"alert_handler.alert.failed.title" = "Unable to load the page requested.";

"bookmark_context_menu.view.title" = "View";
...
"settings.about.appverion.title" = "Version";
"settings.about.build.title" = "Build";
"settings.about.our_website.button" = "Our Website";
"settings.about.source.title" = "Source";
"settings.about.button.license" = "GNU General Public License v3";

"download_mac_settings.tab.title" = "Downloads";

"download_mac_folder.button.change" = "Change";
"download_mac_folder.button.reset" = "Reset to default";
"download_mac_folder.unknown" = "Unknown";
"download_mac_folder.panel.message" = "Select a folder for ZIM downloads";
"download_mac_folder.error.title" = "Can't use this folder.";
"download_mac_folder.error.not_writable" = "You don't have permission to save files here.";
"download_mac_folder.error.save_failed" = "Couldn't set the download folder. Try again.";

"bookmark.navigation.title" = "Bookmarks";
"bookmark.overlay.empty.title" = "No bookmarks";

"search_result.zimfile.empty.message" = "No opened ZIM file";
"search_result.zimfile.no_result.message" = "No result";
"search_result.zimfile.voice_over_count" = "Found results: %@";
"search_result.sidebar.button.remove" = "Remove";
...
"enum.category.other" = "Other";
"enum.external_link_loading_policy.always_ask" = "Always Ask";
"enum.external_link_loading_policy.always_load" = "Always Load";
"enum.external_link_loading_policy.never_load" = "Never Load";
"enum.library_language_sorting_model.a-z" = "A-Z";
"enum.library_language_sorting_model.by_count" = "By Count";
"enum.libray_tab_item.opened" = "Opened";
"enum.libray_tab_item.categories" = "Categories";
"enum.libray_tab_item.downloads" = "Downloads";

"enum.navigation_item.reading" = "Reading";
"enum.navigation_item.bookmarks" = "Bookmarks";
"enum.navigation_item.new_tab" = "New Tab";
"enum.navigation_item.opened" = "Opened";
"enum.navigation_item.categories" = "Categories";
"enum.navigation_item.downloads" = "Downloads";
"enum.navigation_item.settings" = "Settings";
"enum.navigation_item.hotspot" = "Hotspot";
"enum.search_result_snippet_mode.disabled" = "Disabled";
"enum.search_result_snippet_mode.matches" = "Matches";

"payment.donate.title" = "Donate";
"payment.description.label" = "Support Kiwix";
"payment.summary_page.title" = "Support Kiwix";
...
